[gd_scene load_steps=3 format=3 uid="uid://dblnjb14cqaif"]

[ext_resource type="Script" uid="uid://bnpguy7y2xdrf" path="res://scripts/Tooltip.gd" id="1_7dicn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dicn"]
bg_color = Color(0.5411765, 0.3647059, 0.19215687, 0.31764707)

[node name="Tooltip" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7dicn")
script = ExtResource("1_7dicn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2

[node name="SellPriceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
